# BizarreTale

./: .gitignore  CMakeLists.txt  README.md
src/: CONST_DEFINITIONS.h  CPrimitiveQuad.cpp  CPrimitiveQuad.hpp  CTile.cpp  CTile.h  ClassAnalizer.cpp  ClassAnalizer.h  ClassAnalyzer.cpp  ClassAnalyzer.h  Level.cpp  Level.hpp  LuaScripts.cpp  LuaScripts.h  MapEditor.cpp  MapEditor.h  MapEntity.cpp  MapEntity.h  MapIO.cpp  MapIO.h  PrimitiveQuad.cpp  PrimitiveQuad.hpp  Singleton.hpp  ThicknessLine.cpp  ThicknessLine.hpp  ThicknessLineArray.cpp  ThicknessLineArray.hpp  TileEntity.cpp  TileEntity.h  main.cpp
src/Abstract/: IComponent.cpp  IComponent.hpp  IEntity.cpp  IEntity.hpp  ISystem.cpp  ISystem.hpp
src/Components/: CPrimitiveQuad.hpp  CTile.cpp  IComponent.hpp
src/Engine/: CONST_DEFINITIONS.h  CONST_DEFINITIONS.hpp  Level.cpp  Level.hpp  MapEditor.cpp  MapEditor.h  MapEditor.hpp  MapIO.cpp  MapIO.h  ThicknessLine.hpp  ThicknessLineArray.cpp  ThicknessLineArray.hpp
src/Engine/Components/: CDrawable.cpp  CDrawable.hpp  CPrimitiveQuad.cpp  CPrimitiveQuad.hpp  CTile.cpp  CTile.h  CTile.hpp  CTransform.cpp  CTransform.hpp  IComponent.cpp  IComponent.hpp
src/Engine/Components/Primitives/: CRectangle.cpp  CRectangle.hpp  CTriangle.cpp  CTriangle.hpp
src/Engine/CustomGUI/: EditboxAndLabel.cpp  EditboxAndLabel.hpp
src/Engine/Entity/: EObject.cpp  EObject.hpp  IEntity.cpp  IEntity.hpp
src/Engine/Systems/: LevelManager.cpp  LevelManager.hpp  SLevelManager.cpp  SRender.cpp  SUi.hpp  UIWrapper.cpp  UIWrapper.hpp
src/Engine/Systems/Managers/: ComponentManager.cpp  ComponentManager.hpp  EntityManager.cpp  EntityManager.hpp
src/Engine/Util/: GetClassName.hpp  IDGenerator.cpp  IDGenerator.hpp
src/Entity/: EObject.cpp  EObject.hpp  IEntity.hpp
src/Game/: Game.cpp  Game.hpp
src/Game/Labyrinth/: Labyrinth.cpp  Labyrinth.hpp
src/Game/TestNewECS/: TestECS.cpp  TestECS.hpp
src/Systems/: ISystem.cpp  LevelManager.cpp  LevelManager.hpp  SLevelManager.cpp  SLevelManager.hpp  SRender.hpp  SUi.cpp  SUi.hpp
src/Util/: IDGenerator.cpp  IDGenerator.hpp
